<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ip_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shaperectangulodegrade"
        android:elevation="3dp"
        android:orientation="horizontal"
        android:padding="3dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="end"
                    android:text="@string/titulo_Rubro"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/nro_viaje_tview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/alma_gradiente1"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4"
                    tools:text="Rubro" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_Empresa" />

                <TextView
                    android:id="@+id/pla_nro_tview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textAllCaps="false"
                    android:textColor="@color/alma_gradiente1"
                    android:textSize="15sp"
                    tools:text="Empresa" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/titulo_Telefono" />

                <TextView
                    android:id="@+id/pla_nro_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textAllCaps="false"
                    android:textColor="@color/alma_gradiente1"
                    android:textSize="15sp"
                    tools:text="Telefono" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/LightGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_Fecha" />

                <TextView
                    android:id="@+id/pla_fecha_tview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-condensed"
                    android:textAllCaps="false"
                    android:textColor="@color/alma_gradiente1"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2018-07-18" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/titulo_Hora"
                    android:textSize="16sp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/estado_tview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="12dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/alma_gradiente1"
                    android:textSize="15sp"
                    tools:text="Hora" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageView3"
                android:layout_width="24dp"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="centerCrop"
                android:tag="EditPlanilla"
                android:tint="@color/red"
                app:srcCompat="@drawable/ic_cancel"
                android:contentDescription="@string/btn_borrar" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>